--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha2
	- Fixed a problem were invalid bitrates below the set downsample
		bitrate could cause lame to crash as they weren't 
		validated. 
	- Added XSPF Flash player, rough around the edges but it works
		(Thx pb1dft/GrinningArmor)
	- Fixed bug with Album --> Artist sorting, wasn't allowing you to
		sort Z-A
	- Fixed bug with most popular where links weren't being generated
		correctly


--------------------------------------------------------------------------
  v.3.3.3-Alpha1 10/28/2006
        - Added IP History to admin->users (Thx pb1dft)
	- Added HTTP auth method, auto-creates a 'user' if the auth user
		doesn't exist in the database. 
	- Fixed Mail statistics. It broke down after earlier updates.
	- Reworked RSS features (Thx pb1dft)
		Newest and latest songs albums and artist are available 
		through RSS.
	- Reworked Stats so that they are time specific, allows for 
		Top 10 of this week, threshold is per user configured
	- Added Admin Allow XXXX preferences for downsampling, streaming
		localplay and democratic play
	- Added Generate Config tool for admins to update their configs
		to the latest version. It reads current settings and merges
		with the new config file and prompts for a download
	- Added PutENV check on test page to make sure we can redefine
		memory limit and safemode is off
	- Added Russian translation (Thx Dimon) 
	- Fixed a problem with vainfo ignoring file pattern if no other
		tags were found
	- Added new version of getid3() library which will hopefully 
		resolve some PHP5 related issues
	- Fixed security issue that allowed users to gain gues access to
		ampache if register globals is enabled. 