@@ -195,6 +195,12 @@ $old_error_handler = set_error_handler("ampache_error_handler");
 vauth_init($results);
 
 /* Check their PHP Vars to make sure we're cool here */
+$post_size = @ini_get('post_max_size');
+if (substr($post_size,strlen($post_size)-1,strlen($post_size)) != 'M') { 
+	/* Sane value time */
+	ini_set('post_max_size','8M');
+}
+
 if ($results['memory_limit'] < 16) { 
 	$results['memory_limit'] = 16;
 }
